--- a/simulation/utils/machine_learning/cycle_gan/dvc.yaml
+++ b/simulation/utils/machine_learning/cycle_gan/dvc.yaml
@@ -3,6 +3,7 @@ stages:
     cmd: python3 train.py
     deps:
     - ../../../../data
+    - config.yaml
     outs:
     - checkpoints/dr_drift_256/latest_net_d_a.pth
     - checkpoints/dr_drift_256/latest_net_d_b.pth
