groundtruth: Fix visualization node
The groundtruth visualization node had a small unnoticed bug.
These changes also introduce a test that should catch similar bugs in the future.

--- a/simulation/src/simulation_groundtruth/CMakeLists.txt
+++ b/simulation/src/simulation_groundtruth/CMakeLists.txt
@@ -200,4 +200,5 @@ if(CATKIN_ENABLE_TESTING)
   add_rostest(launch/test/groundtruth_node.test)
   add_rostest(launch/test/renderer.test)
   add_rostest(launch/test/object_controller.test)
+  add_rostest(launch/test/groundtruth_visualization_node.test)
 endif()
