ci: Fix blocking pipeline job in merge requests
The deploy-docker-images Job should be optional for non-master branches but was causing a blocked pipeline in merge request and thus had to be executed every time.

I have used only/except instead of rules as it seems to have a bug that causes the detached pipelines. See: https://gitlab.com/gitlab-org/gitlab/-/issues/34756

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -216,15 +216,9 @@ cml-cyclegan:
 
 # Build and deploy the CI docker image to the gitlab registry
 # This is done everytime the master branch is updated
-deploy-docker-images:
+.docker-images-rule:
   stage: deploy
   image: docker:19.03.11
-  # Always run on master
-  # Allow to manually build the ci image
-  # E.g. to test if the Dockerfile is still working
-  rules:
-  - if: '$CI_COMMIT_REF_NAME == "master"'
-  - when: manual
   tags:
     - docker
   services:
@@ -265,3 +259,17 @@ deploy-docker-images:
     - cd ../kitcar_ros_ci
     - /bin/sh build.sh $CI_REGISTRY $TAG_DEFAULT_IMAGE_CI $TAG_KITCAR_ROS_IMAGE
     - docker push $CI_REGISTRY/kitcar/kitcar-gazebo-simulation/kitcar_ros_ci:$TAG_KITCAR_ROS_IMAGE
+
+deploy-docker-images-master:
+  extends: .docker-images-rule
+  # Always run on master
+  only:
+    - master
+
+deploy-docker-images:
+  extends: .docker-images-rule
+  # Allow to manually build the ci image
+  # E.g. to test if the Dockerfile is still working
+  except:
+    - master
+  when: manual
