--- a/init/requirements_documentation.txt
+++ b/init/requirements_documentation.txt
@@ -1,8 +1,8 @@
-better-apidoc==0.3.1
-docutils==0.16
+better-apidoc>=0.3.1
+docutils>=0.16
 graphviz==0.13.2
-Sphinx==3.0.2
+Sphinx>=3
 sphinx_rtd_theme
 sphinxcontrib-programoutput
 sphinx-prompt
-breathe==4.16.0
+breathe>=4.16.0
